TRPC: Boiler_plate for frontend/backend communication

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
 # Any value works here, should be somewhat secure
-PAYLOAD_SECRET=poibehndfuvffewhubwprio
+PAYLOAD_SECRET=powerpoint
 
 # Database - either MongoDB or Postgres work
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb+srv://harsh2001tiwari:vPvssEi46wKydFgI@cluster0.6bbo3m1.mongodb.net/?retryWrites=true&w=majority
 
 # Payments
 STRIPE_SECRET_KEY=
