--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.36.1",
-    "@trpc/next": "^10.45.0",
     "@trpc/client": "^10.45.0",
+    "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.8",
     "payload": "^2.9.0",
     "react": "^18",
     "react-dom": "^18",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
